admin side half done

--- a/views/adminUser.ejs
+++ b/views/adminUser.ejs
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/viewbooks" method="GET">
+    <input type="button" onclick="location.href='/viewbooks';" value="books"/>
+    </form>
     <form action="/logout" method="GET">
     <input type="button" onclick="location.href='/logout';" value="Logout"/>
     </form>
