--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -14,6 +14,10 @@
         <br>
         <input type="submit" value="Login"/>       
     </form>
+
+    <form action="/register2" method="GET">
+    <input type="button" onclick="location.href='/register2';" value="register"/>
+    </form>
     <form action="/home" method="GET">
     <input type="button" onclick="location.href='/home';" value="Home"/>
     </form>
