--- a/views/registerA.ejs
+++ b/views/registerA.ejs
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </head>
 <body>
-    <form action="/register2" method="POST">
+    <form action="/registeradmin" method="POST">
         <input type="text" name="uname" placeholder="Username">
         <br>
         <input type="password" name="password" placeholder="Password">
