--- a/views/adminUser.ejs
+++ b/views/adminUser.ejs
@@ -10,6 +10,9 @@
     <form action="/viewbooks" method="GET">
     <input type="button" onclick="location.href='/viewbooks';" value="books"/>
     </form>
+    <form action="/resolve" method="GET">
+    <input type="button" onclick="location.href='/resolve';" value="Resolve Requests"/>
+    </form>
     <form action="/logout" method="GET">
     <input type="button" onclick="location.href='/logout';" value="Logout"/>
     </form>
