--- a/views/adminUser.ejs
+++ b/views/adminUser.ejs
@@ -13,6 +13,9 @@
     <form action="/resolve" method="GET">
     <input type="button" onclick="location.href='/resolve';" value="Resolve Requests"/>
     </form>
+    <form action="/gotoadminreq" method="GET">
+    <input type="button" onclick="location.href='/gotoadminreq';" value="go to admin login request portal"/>
+    </form>
     <form action="/logout" method="GET">
     <input type="button" onclick="location.href='/logout';" value="Logout"/>
     </form>
