only frontend remaining

--- a/views/client.ejs
+++ b/views/client.ejs
@@ -10,7 +10,7 @@
     <form action="/clientlogin" method="POST">
         username:<input type="text" name="username">
         <br>
-        password: <input type="text" name="password">
+        password: <input type="password" name="password">
         <br>
         <input type="submit" value="Login"/>
     </form>
