--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,7 +10,7 @@
     <form action="/adminlogin" method="POST">
         username:<input type="text" name="username">
         <br>
-        password: <input type="text" name="password">
+        password: <input type="password" name="password">
         <br>
         <input type="submit" value="Login"/>       
     </form>
