--- a/views/adminloginreq.ejs
+++ b/views/adminloginreq.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Admin Registration Requests</title>
     <style>
         input[type=button], input[type=submit], input[type=reset] {
         background-color: #7160FC;
@@ -20,21 +20,24 @@
     }
         </style>
 </head>
-<script>
-    request=<%- JSON.stringify(data) %>;
-    uname= '<%= name %>';
-</script>
 <body class="p-3 mb-2 bg-secondary text-white">
     <center>
     <div class="jumbotron">
         <h1>Admin Verification Request Portal</h1>      
     </div>
-    <table id="registerlist"></table>
+    <table id="registerlist">
+    <% reqnumber=data.length %>
+
+    <% for(i=0;i<reqnumber;i++){ %>
+    <tr>
+        <td style="padding:10px"><%= data[i].uname %></td>
+        <td style="padding:10px"><form action="/approvereq" method="POST"><input type="text" value="<%= data[i].uname %>" name="username" style="display:none"><input type="text" value="<%= data[i].password %>" name="password" style="display:none"><input type="submit" value="Approve"></form></td><td style="padding:10px"><form action="/denyreq" method="POST"><input type="text" value="<%= data[i].uname %>" name="username" style="display:none"><input type="text" value="<%= data[i].password %>" name="password" style="display:none"><input type="submit" value="Deny"></form></td>
+    </tr>
+    <% }; %>
+    </table>
     <form action="/adminhome" method="GET">
     <input type="button" onclick="location.href='/adminhome';" value="Home"/>
     </form>
     </center>
 </body>
-    <script src="scripts/adminloginreq.js">
-    </script>
 </html>
