--- a/views/adminrequestportal.ejs
+++ b/views/adminrequestportal.ejs
@@ -20,10 +20,6 @@
     }
         </style>
 </head>
-<script>
-    books= <%- JSON.stringify(data) %>;
-    uname= '<%= name %>';
-</script>
 <body class="p-3 mb-2 bg-secondary text-white">
     <center>
     <div class="jumbotron">
@@ -31,13 +27,16 @@
     </div>
     
 
-    <table id="requestlist"></table>
+    <table id="requestlist">
+        <% booksnumber=data.length %>
+        <% for(i=0;i<booksnumber;i++){ %>
+        <tr><td style="padding:10px"><%= data[i].bid %></td><td style="padding:10px"><%= data[i].bname %></td><td><%= data[i].requested_by %></td><td style="padding:10px"><form action="/approve" method="POST"><input type="text" value="<%= data[i].requested_by %>" name="username" style="display:none"><input type="text" value="<%= data[i].bid %>" name="bookid" style="display:none"><input type="submit" value="Approve"></form></td><td style="padding:10px"><form action="/deny" method="POST"><input type="text" value="<%= data[i].requested_by %>" name="username" style="display:none"><input type="text" value="<%= data[i].bid %>" name="bookid" style="display:none"><input type="submit" value="Deny"></form></td></tr>
+    <% }; %>
+    </table>
     <form action="/adminhome" method="GET">
     <input type="button" onclick="location.href='/adminhome';" value="Home"/>
     </form>
     <table id="registerlist"></table>
     </center>
 </body>
-    <script src="scripts/requestadmin.js">
-    </script>
 </html>
