--- a/views/requested.ejs
+++ b/views/requested.ejs
@@ -20,21 +20,23 @@
     }
     </style>
 </head>
-<script>
-    books= <%- JSON.stringify(data) %>;
-    uname= '<%= name %>';
-</script>
 <body class="p-3 mb-2 bg-secondary text-white">
     <center>
     <div class="jumbotron">
         <h1>Requested Books</h1>      
     </div>
-    <table id="requestedbooklist"></table>
+    <table id="requestedbooklist">
+        <% booksnumber=data.length %>
+        <% for(i=0;i<booksnumber;i++){ %>
+    <tr><td style="padding:10px"><%= data[i].bid %></td>
+        <td style="padding:10px"><%= data[i].bname %></td>
+        <td style="padding:10px"><form action="/cancelrequest" method="POST"><input type="text" value="<%= name %>" name="username" style="display:none"><input type="text" value="<%= data[i].bid %>" name="bookid" style="display:none"><input type="submit" value="Cancel Request"></form></td>
+    </tr>
+<% } %>
+    </table>
     <form action="/clienthome" method="GET">
     <input type="button" onclick="location.href='/clienthome';" value="Home"/>
     </form>
     </center>
 </body>
-    <script src="scripts/requested.js">
-    </script>
 </html>
