--- a/views/requestportal.ejs
+++ b/views/requestportal.ejs
@@ -20,23 +20,45 @@
     }
     </style>
 </head>
-<script>
+<!-- <script>
     books= <%- JSON.stringify(data1) %>;
     requests= <%- JSON.stringify(data2) %>;
     uname= '<%= name %>';
-</script>
+</script> -->
 <body class="p-3 mb-2 bg-secondary text-white">
     <center>
     <div class="jumbotron">
         <h1>Book Request Portal</h1>      
     </div>
 
-    <table id="booklist"></table>
+    <table id="booklist">
+        <% booksnumber=data1.length %>
+        <% for(i=0;i<booksnumber;i++){ %>
+        <% if(data1[i].issued_by===null){ %>
+        <tr><td style="padding:10px"><%= data1[i].bid %></td>
+            <td style="padding:10px"><%= data1[i].bname %></td>
+            <td style="padding:10px"><form action="/makerequest" method="POST"><input type="text" value="<%= name %>" name="username" style="display:none"><input type="text" value="<%= data1[i].bname %>" name="bookname" style="display:none"><input type="text" value="<%= data1[i].bid %>" name="bookid" style="display:none"><input type="submit" value="Request"></form></td>
+        </tr>
+        <% }else{%>
+        <% if(data1[i].issued_by===name){ %>
+            <tr><td style="padding:10px"><%= data1[i].bid %></td>
+                <td style="padding:10px"><%= data1[i].bname %></td>
+                <td style="padding:10px;">Issued to you</td>
+            </tr>
+        <% } else{%>
+            <tr><td style="padding:10px"><%= data1[i].bid %></td>
+                <td style="padding:10px"><%= data1[i].bname %></td>
+                <td style="padding:10px">Not available</td>
+            </tr>
+        <% } %>
+    <% } %>
+<% } %>
+    </table>
     <form action="/clienthome" method="GET">
     <input type="button" onclick="location.href='/clienthome';" value="Home"/>
     </form>
     </center>
 </body>
-    <script src="scripts/requestportal.js">
-    </script>
+    <!-- <script src="scripts/requestportal.js">
+    </script> -->
 </html>
